--- a/src/Components/Board/Board.module.css
+++ b/src/Components/Board/Board.module.css
@@ -12,13 +12,13 @@
 .title {
     text-align: center;
     margin: 0 0 5px;
-    color: #35364c;
+    color: var(--color-grafit);
 }
 
 .subtitle {
     text-align: center;
     margin: 0;
-    color: #35364c;
+    color: var(--color-grafit);
 }
 
 .headerBlock {
