--- a/src/Components/Task/Task.module.css
+++ b/src/Components/Task/Task.module.css
@@ -1,15 +1,14 @@
 .task {
     display: block;
     width: 100%;
-    /*border: 1px solid #eaeaea;*/
     box-sizing: border-box;
     border-radius: 5px;
     overflow: hidden;
-    box-shadow: 0px 0px 0 1px #eaeaea, 0px 0px 5px 0px #e4e4e4;
+    box-shadow: 0px 0px 0 1px var(--color-light-gray), 0px 0px 5px 0px var(--color-middle-gray);
 }
 
 .checked {
-    box-shadow: 0 0 5px 0 #631e1e;
+    box-shadow: 0 0 5px 0 var(--color-dark-red);
 }
 
 .wrapperXs {
@@ -31,7 +30,7 @@
 .status {
     margin: 0;
     padding: 8px 10px;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family:  var(--font-roboto);
     font-weight: 400;
     letter-spacing: 0.3px;
     display: block;
@@ -49,9 +48,9 @@
     width: 15px;
     height: 15px;
     border-radius: 2px;
-    background: #fff;
+    background: var(--color-white);
     display: block;
-    border: 1px solid #9e9b9b;
+    border: 1px solid var(--color-gray);
 }
 
 .input {
@@ -64,8 +63,8 @@
     width: 9px;
     content: '';
     height: 4px;
-    border-left: 2px solid #b9a3e4;
-    border-bottom: 2px solid #b9a3e4;
+    border-left: 2px solid var(--color-purple);
+    border-bottom: 2px solid var(--color-purple);
     top: 50%;
     transform: translateY(-70%) rotate(-45deg);
     left: 18px;
@@ -76,30 +75,30 @@
 }
 
 .create {
-    background: #e4a3a6;
+    background: var(--color-alert);
 }
 .input:checked ~.create:after {
-    border-color: #e4a3a6;
+    border-color: var(--color-alert);
 }
 
 .done {
-    background: #b9a3e4;
+    background: var(--color-purple);
 }
 
 .input:checked ~.done:after {
-    border-color: #b9a3e4;
+    border-color: var(--color-purple);
 }
 
 .progress {
-    background: #a3e4a8;
+    background: var(--color-green);
 }
 
 .input:checked ~.progress:after {
-    border-color: #a3e4a8;
+    border-color: var(--color-green);
 }
 
 .hover {
-    box-shadow: 0px 0px 5px 0px #921010;
+    box-shadow: 0px 0px 5px 0px var(--color-red);
 }
 
 .title {
