--- a/src/Components/TaskDetail/TaskDetail.module.css
+++ b/src/Components/TaskDetail/TaskDetail.module.css
@@ -25,7 +25,7 @@
 
 .placeholder {
     margin: 0 0 8px;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: var(--font-roboto);
 }
 
 .buttonsGroup {
