--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 body {
     background: darkgrey;
-    margin: 0;
+    margin: 2px;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     color: red;
     line-height: 1.5rem;
+
 }
