--- a/src/theme.css
+++ b/src/theme.css
@@ -1,6 +1,6 @@
 :root {
     --font-roboto: 'Roboto Condensed', sans-serif;
-    --font-open-sans: 'Open Sans', sans-serif;
+    --font-open-sans: 'Open Sans';
 }
 :root {
     --color-grafit: #35364c;
